# tfpcbpggsz

./: .gitignore  .readthedocs.yaml  CONTRIBUTING.md  README.md  backup_requirements.txt  environment.yml  environment_old.yml  output.txt  pyproject.toml  requirements.txt  setup.org  test.cxx  test.py
amp/: amp.py  cal_amp.ipynb
amp_ampgen/: D0ToKSpipi2018.cpp  D0ToKSpipi2018.cxx  MyModel.cpp  amp.py  cal_amp.ipynb
analysis/: example.ipynb  example_fit.ipynb  read_result.ipynb  read_result_sim.ipynb  read_result_sim_floatyields.ipynb  tf_fit.py  tf_fit_autograd.py
benchmark/: Fit_bes.py  config.yml  ex1_gen_toy.py  ex2_fit_bes_data.py  gen_eff.py  gen_fit.py  gen_fit_dks_bes.py  gen_fit_pc.py  gen_fit_pc_bes.py  gen_fit_pc_lhcb.py  plot_binning.py  plot_pc.py  read_result.ipynb
canorman_B2DPI_misID/: 01_No_Efficiency.py  01_Pull_study.py  01_run.sh  01_submit.sub  05_Pull_study.py  05_run.sh  05_submit.sub  B2Dpi_misID_shape_parameters.json  Efficiency_shape_B2DK.json  Efficiency_shape_B2Dpi_misID.json  TOY_EXAMPLE.py  TOY_EXAMPLE_BASIC.py
canorman_Efficency/: 03_Gen_and_Fit_Toys_FullEff.py
canorman_InvMassFit/: invariant_mass_fit.py  invariant_mass_fit.py~  run_0.sh
core/: __init__.py  angle.py  config_loader.py  core.py  core_test.py  phasespace.py
docs/: api.rst  conf.py  index.rst  install.rst
example/: check_float_yields.ipynb  exp1.ipynb  exp2.ipynb  exp3.ipynb  exp3_check.ipynb  exp4.ipynb  exp4_dpi.ipynb  exp4_sim.ipynb  massshape.py
examples/: GALLERY_HEADER.rst
fit/: fit.ipynb
func/: Cruijff.ipynb  Lineshape.ipynb  Lineshape_tf.ipynb  (+4 more)
(+424 files in other folders)
